Lab_8 donegit add *!

--- a/Lab_8_front/profile-admin/src/app/app.component.html
+++ b/Lab_8_front/profile-admin/src/app/app.component.html
@@ -17,8 +17,8 @@
 </div>
 
 <div class="content" role="main">
-  <app-profiles></app-profiles>
-
+<!--  <app-profiles></app-profiles>-->
+  <router-outlet></router-outlet>
 </div>
 
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
