--- a/Lab_8_front/profile-admin/src/app/profiles/profiles.component.html
+++ b/Lab_8_front/profile-admin/src/app/profiles/profiles.component.html
@@ -39,13 +39,13 @@
 
 </div>
 
-<label>Name:</label><input id="new_name" #name>
-<label>Email:</label><input id="new_email" #email>
-<label>Address:</label><input id="new_address" #address>
-<label>Picture:</label><input id="new_picture" #picture>
-<label>Age:</label><input id="new_age" #age>
-<label>Town:</label><input id="new_town" #town>
-<button class="btn" (click)="addProfile(name, email, address, picture, age, town)">Add</button><br/>
+<!--<label>Name:</label><input id="new_name" #name>-->
+<!--<label>Email:</label><input id="new_email" #email>-->
+<!--<label>Address:</label><input id="new_address" #address>-->
+<!--<label>Picture:</label><input id="new_picture" #picture>-->
+<!--<label>Age:</label><input id="new_age" #age>-->
+<!--<label>Town:</label><input id="new_town" #town>-->
+<!--<button class="btn" (click)="addProfile(name, email, address, picture, age, town)">Add</button><br/>-->
 
 <label>Attribute:</label><input id="attribute" #attribute>
 <label>Value:</label><input id="value" #value>
